# md2doc-mcp

./: .gitignore  PUBLISHING.md  README.md  dev-setup.sh  example_usage.py  install.sh  mcp-config.json  publish.sh  pyproject.toml
md2doc/: __init__.py  api_client.py  server.py
tests/: __init__.py  test_api_client.py  test_mcp_stdio.py
